service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aplikacja-webowa-service
spec:
  selector:
    app: aplikacja-webowa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
